UI changes (Added RecyclerView for questions list)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Dagger &amp; Hilt</string>
+    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
 </resources>
